[tool.poetry]
name = "narrate-streamlit"
version = "0.1.0"
description = ""
authors = ["Timothy Wang <timothywangdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.86.0"
plotly = "^5.1.0"
streamlit-aggrid = "^0.2.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
